# kai-rs

./: AGENTS.md  CLAUDE.md  LICENSE
docs/: kai-codegen.md  kai-file.md  kai-index.md  kai-ws-test.md  kai-ws.md
docs/superpowers/plans/: 2026-06-24-kai-ws-unit-tests.md
kai-codegen/: Cargo.toml
kai-codegen/src/: main.rs
kai-codegen/tests/: output.ts  test_struct.rs
kai-file/: Cargo.toml
kai-file/src/: error.rs  lib.rs  reverse_line_reader.rs
kai-index/: Cargo.toml
kai-index/src/: atomic_index.rs  distinct_index.rs  document.rs  error.rs  hierarchical_tree.rs  index.rs  index_search.rs  lib.rs  prefix_completion.rs  recursive_index.rs  simple_index.rs  splintr_index.rs  splintr_tokenizer.rs  substring_index.rs  substring_tokenizer.rs  tokenizer.rs
kai-ws/: Cargo.toml
kai-ws/src/: error.rs  lib.rs  ws.rs
